# reference-network

./: .eslintrc.json  .gitignore  README.md  TODO.md  esbuild.js  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: doc-generation.yml  generate-doc.yml  poetry-test.yml
client/: updates.json
config/: __init__.py  config.py  data_config.yaml  plot_config.yaml
docs/config/: config.html  index.html
docs/plugin/: dev.md  notes.md
docs/reference_network/: publication.html  zotero_integration.md
figures/: interactive_graph.html  reference_graph.gv  reference_graph.html
python/: main.py  requirements.txt
python/data/: cache.db  my_zotero_library.csv
python/figures/: reference_graph.gv  reference_graph.html
python/reference_network/: data_fetcher.py  data_parser.py  graph_visualizer.py  reference_graph.py
python/tests/: test_config.py  test_integration.py  test_publication.py  test_publication_database.py  test_reference_graph.py
reference_network/: __init__.py  data_fetcher.html  data_fetcher.py  data_parser.html  data_parser.py  graph_visualizer.html  graph_visualizer.py  publication.py  publication_database.py  reference_graph.html  reference_graph.py
src/: bootstrap.ts  manifest.json  orchestrator.ts  prefs.ts  reference-network.ts  weaver.ts
src/client/: manifest.json
tests/: conftest.py  test_config.py  test_data_fetcher.py  test_data_parser.py  test_graph_visualizer.py  test_ingestor.py  test_integration.py  test_publication.py  test_publication_database.py  test_reference_graph.py
zotero/: lib.ts
(+42 files in other folders)
