[tool.poetry]
name = "reference-network"
version = "0.1.0"
description = ""
authors = ["Raymond W. Chang <raymond.w.jang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
seaborn = "^0.13.2"
beautifulsoup4 = "^4.12.3"
scikit-learn = "^1.4.1.post1"
networkx = "^3.2.1"
pyyaml = "^6.0.1"
black = "^24.2.0"
pydantic = "^2.6.3"
plotly = "^5.19.0"
graphviz = "^0.20.1"
isort = "^5.13.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[tool.pytest.ini_options]
minversion = "8.0.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true